# meeting_project

./: README.md  main.py  pyproject.toml  requirements.txt
exercise/: 01_STT.ipynb  02_Langchain_basic.ipynb  03_Langchain_prompt.ipynb  04_Langchain_outputparser.ipynb
exercise/output/: whisper_full_script.txt  whisper_output_segments.json
streamlit/: main.py  streamlit_basic.py
streamlit/pages/: manage_meeting.py  mypage.py  streamlit_basic.py
streamlit/prompts/: schedule_prompt.txt  summary_prompt.txt  todo_prompt.txt
streamlit/services/: prompt_service.py  whisper_service.py
